# Python

./: atividade3.py  estruturas_controle.py  main.py
00 monolith/: db.sqlite3  manage.py  pyproject.toml
00 monolith/products/: admin.py  models.py
00 monolith/shopsys/: asgi.py  settings.py  (+2 more)
01/: fizzbuzz.py  funcs.py  sint.py
02/: carros.json  carros.py  leitura.py  ler_arquivo.ipynb  vetor2D.py
03/: big_o_1.py  big_o_n.py  config.py  exerc_1.py  exerc_2.py  lista_coisas.py  one-liner.py  test.py  vetores.py
04/: api.py  dict_comprehension.py  disney_api.py  exercicio.py  meu_post.py
05/: ex_01.py  ex_02.py  ex_03.py
07/: db.sqlite3  pyproject.toml
08/: db.sqlite3  pyproject.toml
09/: main.py  pyproject.toml
10/: main.py  pyproject.toml
11/: pyproject.toml  shopflow.db
12/: pyproject.toml
13/: main.py  pyproject.toml
14/: main.py  pyproject.toml  sql_app.db
15/: main.py  pyproject.toml
16/: README.md  pycket_database.db  pyproject.toml
16/app/: main.py
16/app/api/: deps.py
16/app/api/v1/endpoints/: auth.py  finances.py
16/app/core/: config.py  security.py
16/app/db/: base.py  base_class.py  session.py
16/app/models/: finance.py  user.py
16/app/schemas/: finance.py  user.py
Atividade_04/InstaPy/: README.md  arquitetura.excalidraw  pyproject.toml
Atividade_04/InstaPy/instapy/: database.py  main.py  tasks.py
AtividadesClassroom/: analise_logs.py  otimizador_consultas.py
Aula 1/: atividade3.py  estruturas_controle.py
Aula2/: dict-comprehension.py  exercicio-dict-comprehension.py  geradores.py  log.py  main.py  users.py
(+149 files in other folders)
